<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marius.myapplication.RegistrationFragment"
    style="@style/AppTheme"
    android:background="@android:color/holo_green_light">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="104dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/UserNameLabelLogIn"
            android:id="@+id/UserNameLabel"
            android:layout_marginLeft="25dp" />

        <EditText
            android:id="@+id/RegistrationFragmentUsername"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:inputType="text"
            style="@style/text_box_app_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_gravity="center_vertical|top"
        android:layout_marginTop="124dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/PasswordLabelLogIn"
            android:id="@+id/PassWordLabel"
            android:layout_marginLeft="25dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/RegistrationFragmentPassword"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@android:color/white"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="0.16"
            android:layout_gravity="top"
            style="@style/text_box_app_style"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="215dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/RetypePasswordLogIn"
            android:id="@+id/textView"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/RegistrationFragmentRetypePassword"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@android:color/white"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="0.16"
            android:layout_gravity="top"
            style="@style/text_box_app_style"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal|bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LogInFormulairButton"
            android:id="@+id/LogInButtonInRegistrationFragment"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="70dp" />

        <Button
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CancelLogInButton"
            android:id="@+id/CancelLogInButton"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="70dp" />
    </LinearLayout>
</FrameLayout>
